--- a/dll/static/src/scss/partner-logo.scss
+++ b/dll/static/src/scss/partner-logo.scss
@@ -1,3 +1,6 @@
+.partner-logo {
+  text-align: center;
+}
 .partner-logo__image {
   max-height: 80px;
   max-width: 200px;
